# helm

./: .gitignore  Cargo.toml  index.html  package.json  progress.md  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
crates/helm-app/: Cargo.toml  tauri.conf.json
crates/helm-app/capabilities/: default.json
crates/helm-app/icons/: icon.icns
crates/helm-app/src/: anchor.rs  commands.rs  connection.rs  db.rs  install.rs  integration.rs  keychain.rs  lib.rs  main.rs  notifications.rs  persistence.rs  power.rs  reachability.rs  scheduler.rs  schedules.rs  state.rs  subscriber.rs
crates/helm-app/src/commands/: anchor.rs  fs.rs  host.rs  mod.rs  notifications.rs  schedule.rs  system.rs  tmux.rs  tools.rs
crates/helm-app/src/integration/: bash.sh  fish.fish  zsh.zshrc
crates/helm-app/src/tool_integrations/: claude_code.rs  mod.rs
crates/helm-domain/: Cargo.toml
crates/helm-domain/src/: lib.rs
crates/helm-ssh/: Cargo.toml
crates/helm-ssh/src/: lib.rs
crates/helm-tmux/: Cargo.toml
crates/helm-tmux/examples/: probe.rs
crates/helm-tmux/src/: client.rs  lib.rs  parse.rs
crates/helm-tmux/tests/: smoke.rs
scripts/: anchor-rpc.py
src/: App.tsx  index.css  main.tsx
src/features/activity-feed/: InboxSection.tsx  IntegrationSuggestionHost.tsx  NotificationPeek.tsx
src/features/host-editor/: HostEditorModal.tsx
src/features/host-key/: HostKeyPromptModal.tsx
src/features/palette/: Footer.tsx  PaletteHost.tsx  Row.tsx  SectionHeader.tsx  fuzzy.ts  recents.ts
src/features/pinned/: PinnedSection.tsx  resolve.ts
src/features/schedule/: RemotePathPicker.tsx  ScheduleEditorModal.tsx
src/features/shell/: BlockOverlay.tsx  SearchOverlay.tsx  StickyRunHeader.tsx  TerminalScrollbar.tsx  TmuxPane.tsx  blockTracker.ts
src/features/workspace/: ReconnectingOverlay.tsx
src/lib/: folder-view.ts  format.ts  host-status.ts  host.ts  ipc.ts  keymap-engine.ts  keymap.ts  path.ts  store.ts  updater.ts
src/lib/actions/: chrome.ts  dynamic.ts  inbox.ts  index.ts  palette.ts  schedule.ts  search.ts  theme.ts  types.ts  window.ts  workspace.ts
src/lib/terminal/: index.ts  themes.ts
src/ui/: ActivityDot.tsx  Button.tsx  ConfirmHost.tsx  ContextMenu.tsx  Input.tsx  Modal.tsx  Palette.tsx  Sidebar.tsx  SidebarHostRow.tsx  SidebarWindowRow.tsx  SidebarWorkspaceRow.tsx  StatusBarHostSegment.tsx  StatusBarSegment.tsx  StatusDot.tsx  Stepper.tsx  Toast.tsx  ToastHost.tsx  Toggle.tsx  index.ts  tokens.css
