[package]
name = "helm-ssh"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
helm-domain.workspace = true
russh.workspace = true
russh-keys.workspace = true
tokio.workspace = true
bytes.workspace = true
thiserror.workspace = true
tracing.workspace = true
async-trait.workspace = true
parking_lot.workspace = true
